--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cloud_firestore: ^3.4.9
   firebase_storage: ^10.3.9
   firebase_auth: ^3.10.0
+  image_picker: ^0.8.5+3
+  firebase_messaging: ^13.0.4
 
 dev_dependencies:
   flutter_test:
